# ocameel

./: .gitignore  .ocp-indent  README.markdown  _oasis  ocameel.opam  package-lock.json  package.json
lib/: LexBuffer.ml  Lexer.body.mli  Lexer.sedlex.body.ml  Parser.ml  Parser.mli  ParserAutomaton.mly  aST.ml  jbuild  lexer.ml  lexer.mli  ocameel.ml  parser.ml  parser.mli  token.ml
src/: ocameel.ml  runtime.c
test/: test-helper.bash  tests-0.1-parsing.bats  tests-1.1.bats  tests-1.2.bats
