opam-version: "2.0"
name: "ocameel"
version: "0.0.1"
maintainer: "ELLIOTTCABLE <me@ell.io>"
authors: "ELLIOTTCABLE <me@ell.io>"
license: "ISC"
homepage: "https://github.com/ELLIOTTCABLE/ocameel"
bug-reports: "https://github.com/ELLIOTTCABLE/ocameel/issues"
depends: [
  "jbuilder" {build}
  "core" {>= "0.10.0"}
  "ppx_deriving"
  "ppx_sexp_conv"
]
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "build" "test/git"] {with-test}
]
dev-repo: "git+https://github.com/ELLIOTTCABLE/ocameel.git"
